--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,5 @@ services:
   auth:
     build: ./auth
     container_name: auth_server
+    volumes:
+      - ./auth/config.json:/app/config.json:rw
