--- a/rtmp/nginx.conf
+++ b/rtmp/nginx.conf
@@ -1,40 +1,30 @@
-events {}
-rtmp {
-    server {
-        listen 1935; # Listen on standard RTMP port
+ user                    nginx;
+ worker_processes        auto;
 
-        application live {
-            live on;
-            hls on;
-            hls_path /tmp/hls;
-            hls_fragment 10s; # default is 5s
-            hls_playlist_length 5m; # default is 30s
-            # once playlist length is reached it deletes the oldest fragments
+ error_log               /var/log/nginx/error.log notice;
+ pid                     /var/run/nginx.pid;
 
-            # authentication
-            on_publish http://auth_server:8000/auth;
-        }
-    }
+
+events {
+    worker_connections   1024;
 }
 
+
 http {
-    server {
-        listen 8080;
+    include              /etc/nginx/mime.types;
+    default_type         application/octet-stream;
 
-        location / {
-            root /www;
-        }
+    resolver             127.0.0.11 ipv6=off;
 
-        location /hls {
-            types {
-                application/vnd.apple.mpegurl m3u8;
-                application/octet-stream ts;
-            }
-            root /tmp;
-            add_header Cache-Control no-cache;
+    log_format           main '$remote_addr - $remote_user [$time_local] "$request" '
+    '$status             $body_bytes_sent "$http_referer" '
+    '"$http_user_agent"  "$http_x_forwarded_for"';
 
-            # To avoid issues with cross-domain HTTP requests (e.g. during development)
-            add_header Access-Control-Allow-Origin *;
-        }
-    }
+    access_log           /var/log/nginx/access.log main;
+
+    sendfile             on;
+
+    keepalive_timeout    65;
+
+    include              /etc/nginx/sites-enabled/*;
 }
