--- a/rtmp/Dockerfile
+++ b/rtmp/Dockerfile
@@ -9,6 +9,6 @@ RUN mkdir /etc/nginx/sites-enabled
 COPY rtmp.nginx /etc/nginx/sites-available/
 RUN ln -s /etc/nginx/sites-available/rtmp.nginx /etc/nginx/sites-enabled/rtmp.nginx
 
-RUN rm -rf /etc/nginx/conf.d
+RUN rm -r /etc/nginx/conf.d
 
 COPY nginx.conf /etc/nginx/nginx.conf
