--- a/rtmp/nginx.conf
+++ b/rtmp/nginx.conf
@@ -1,30 +1,40 @@
- user                    nginx;
- worker_processes        auto;
+events {}
+rtmp {
+    server {
+        listen 1935; # Listen on standard RTMP port
 
- error_log               /var/log/nginx/error.log notice;
- pid                     /var/run/nginx.pid;
+        application live {
+            live on;
+            hls on;
+            hls_path /tmp/hls;
+            hls_fragment 10s; # default is 5s
+            hls_playlist_length 5m; # default is 30s
+            # once playlist length is reached it deletes the oldest fragments
 
-
-events {
-    worker_connections   1024;
+            # authentication
+            on_publish http://auth_server:8000/auth;
+        }
+    }
 }
 
-
 http {
-    include              /etc/nginx/mime.types;
-    default_type         application/octet-stream;
+    server {
+        listen 8080;
 
-    resolver             127.0.0.11 ipv6=off;
+        location / {
+            root /www;
+        }
 
-    log_format           main '$remote_addr - $remote_user [$time_local] "$request" '
-    '$status             $body_bytes_sent "$http_referer" '
-    '"$http_user_agent"  "$http_x_forwarded_for"';
+        location /hls {
+            types {
+                application/vnd.apple.mpegurl m3u8;
+                application/octet-stream ts;
+            }
+            root /tmp;
+            add_header Cache-Control no-cache;
 
-    access_log           /var/log/nginx/access.log main;
-
-    sendfile             on;
-
-    keepalive_timeout    65;
-
-    include              /etc/nginx/sites-enabled/*;
+            # To avoid issues with cross-domain HTTP requests (e.g. during development)
+            add_header Access-Control-Allow-Origin *;
+        }
+    }
 }
