--- a/rtmp/nginx.conf
+++ b/rtmp/nginx.conf
@@ -5,14 +5,17 @@ rtmp {
 
         application live {
             live on;
+
+            # authentication
+            on_publish http://auth_server:8000/auth;
+        }
+        application hls {
+            live on;
             hls on;
             hls_path /tmp/hls;
             hls_fragment 10s; # default is 5s
             hls_playlist_length 5m; # default is 30s
             # once playlist length is reached it deletes the oldest fragments
-
-            # authentication
-            on_publish http://auth_server:8000/auth;
         }
     }
 }
